# codon-wasm

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile.sh  dump.sh  file.txt  out.txt
lib/: lib.cpp  lib.h
runtime-wasi/: CMakeLists.txt  Dwarf.h  exc.cpp  lib.cpp  lib.h
src/: fib.codon  main.c  main.cpp  mainpy.codon
